added ajax loaders

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     <![endif]-->
 
 
-    <div ui-view=""></div>
+    <div id="main-ui-view" ui-view=""></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
