--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://acc-bbq.herokuapp.com data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; connect-src 'self' https://acc-bbq.herokuapp.com">-->
-    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://ssl.gstatic.com https://acc-bbq.herokuapp.com; style-src 'self' 'unsafe-inline';">-->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https: 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
 
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
@@ -58,6 +56,13 @@
 
     <script type="text/javascript" src="cordova.js"></script>
 
+    <script>
+      document.addEventListener('backbutton', onBackKeyDown, false);
+      function onBackKeyDown(e) {
+        e.preventDefault();
+      }
+    </script>
+
 
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
@@ -72,6 +77,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
+      <script src="bower_components/ngstorage/ngStorage.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -79,13 +85,12 @@
       <!-- injector:js -->
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/interceptor.service.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="components/auth/router.decorator.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
+      <script src="components/auth/interceptor.service.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
-      <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
       <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
       <script src="components/bbq-login/bbq-login.directive.js"></script>
