--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,10 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <link rel="manifest" href="manifest.json">
+
     <title>Feedback</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
