--- a/client/index.html
+++ b/client/index.html
@@ -13,14 +13,22 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <meta name="mobile-web-app-capable" content="yes">
 
+    <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
 
     <title>Feedback</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+
+    <link rel="icon" type="image/svg" href="assets/svg/logo.svg" />
+    <link rel="icon" type="image/png" href="assets/icons/res/mipmap-xhdpi/ic_launcher.png" />
+
+    <meta name="theme-color" content="#abc32b">
+
+
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
