--- a/client/index.html
+++ b/client/index.html
@@ -14,18 +14,27 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
 
-    <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="manifest.json">
-
     <title>Feedback</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-
-    <link rel="icon" type="image/svg" href="assets/svg/logo.svg" />
-    <link rel="icon" type="image/png" href="assets/icons/android/xhdpi.png" />
-
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+    <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#abc32b">
+    <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
     <meta name="theme-color" content="#abc32b">
 
 
