--- a/client/index.html
+++ b/client/index.html
@@ -50,9 +50,15 @@
     <!-- endbuild -->
 
     <style>
+
       div, span, button, input, textarea, li, h1, h2, h3, h4, h5, h6 {
         font-family: sans-serif;
       }
+
+      html, body {
+        background-color: #dce1e2;
+      }
+
     </style>
 
   </head>
@@ -118,6 +124,7 @@
       <script src="components/bbq-login/bbq-login.directive.js"></script>
       <script src="components/feedback/feedback.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
+      <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/toast/toast.service.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="components/util/util.service.js"></script>
