added arrow svgs

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
 
-    <title>Feedback</title>
+    <title>Fixit</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -113,18 +113,19 @@
       <!-- injector:js -->
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/user.service.js"></script>
+      <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
+      <script src="components/auth/user.service.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
-      <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
       <script src="components/bbq-login/bbq-login.directive.js"></script>
       <script src="components/feedback/feedback.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
+      <script src="components/svg/svg.js"></script>
       <script src="components/toast/toast.service.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="components/util/util.service.js"></script>
