logout user if a 401 is hit

--- a/client/index.html
+++ b/client/index.html
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
     <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#abc32b">
+    <meta name="msapplication-TileColor" content="#005e9c">
     <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
-    <meta name="theme-color" content="#abc32b">
+    <meta name="theme-color" content="#005e9c">
 
 
     <!-- build:css(client) app/vendor.css -->
