--- a/client/index.html
+++ b/client/index.html
@@ -51,34 +51,24 @@
 
     <style>
 
-      div, span, button, input, textarea, li, h1, h2, h3, h4, h5, h6 {
-        font-family: sans-serif;
-      }
-
       @font-face {
-        font-family: 'museo';
-        src: url('/assets/fonts/museo_sans_family_web/MuseoSans_300Web.eot'),
-        url('/assets/fonts/museo_sans_family_web/MuseoSans_300Web.woff') format('woff');
-        font-weight: 300;
-        font-style: normal;
-      }
-
-      @font-face {
-        font-family: 'museo';
-        src: url('/assets/fonts/museo_sans_family_web/MuseoSans_500Web.eot'),
-        url('/assets/fonts/museo_sans_family_web/MuseoSans_500Web.woff') format('woff');
+        font-family: 'PT-Sans';
+        src: url('/assets/fonts/PT_Sans-Web-Regular.ttf') format('truetype');
         font-weight: 500;
         font-style: normal;
       }
 
       @font-face {
-        font-family: 'museo';
-        src: url('/assets/fonts/museo_sans_family_web/MuseoSans_700Web.eot'),
-        url('/assets/fonts/museo_sans_family_web/MuseoSans_700Web.woff') format('woff');
+        font-family: 'PT-Sans';
+        src: url('/assets/fonts/PT_Sans-Web-Bold.ttf') format('truetype');
         font-weight: 700;
         font-style: normal;
       }
 
+
+      div, span, button, input, textarea, li, h1, h2, h3, h4, h5, h6 {
+        font-family: 'PT-Sans';
+      }
 
       html, body {
         background-color: #dce1e2;
@@ -87,7 +77,7 @@
     </style>
 
   </head>
-  <body ng-app="bbqApp" ng-class="{'fade-in': isReady}">
+  <body ng-app="bbqApp">
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
