--- a/client/index.html
+++ b/client/index.html
@@ -77,14 +77,16 @@
     </style>
 
   </head>
-  <body ng-app="bbqApp">
+  <body ng-app="bbqApp" class="{{currentRoute}}">
+
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-
-    <div id="main-ui-view"  ui-view=""></div>
-
+    <navbar></navbar>
+    <md-content>
+      <div id="main-ui-view"  ui-view=""></div>
+    </md-content>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
