--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
       }
 
       div, span, button, input, textarea, li, h1, h2, h3, h4, h5, h6 {
-        font-family: 'PT-Sans';
+        font-family: 'PT-Sans' !important;
       }
 
       html, body {
