--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,10 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
 
+
     <title>Fixit</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+
 
     <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple/apple-icon-60x60.png">
@@ -60,7 +61,42 @@
 
       html, body {
         background: #dce1e2 !important;
+
       }
+
+
+      .navbar {
+        position: absolute;
+        width: 100%;
+        z-index: 10;
+      }
+
+      .navbar-load {
+        position: absolute;
+        height: 80px;
+        background-color: #dce1e2;
+        width: 100%;
+      }
+      .navbar-load-inner {
+        position: absolute;
+        height: 40px;
+        background-color: #1a414f;
+        width: 100%;
+        top: 0;
+      }
+
+      .body-container {
+        margin-top: 80px;
+      }
+
+      .logo-container svg {
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        top: 0;
+      }
+
+
 
     </style>
 
@@ -83,8 +119,31 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <navbar></navbar>
-    <div id="main-ui-view"  ui-view=""></div>
+
+
+
+    <div class="navbar" navbar=""></div>
+    <div class="navbar-load">
+      <div class="navbar-load-inner"></div>
+      <div class="logo-container">
+        <svg id="UI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 89.75">
+          <defs>
+            <style>.white-fill-logo{fill:#fff;}.blue-fill-logo{fill:#005e9c;}</style>
+          </defs>
+          <title>logo</title>
+          <rect class="white-fill-logo" x="4.03" y="18.04" width="86.21" height="51.3"></rect>
+          <path class="blue-fill-logo" d="M25.77,39.55v7.77l6-6.13a3,3,0,0,1,4.27,0,1.92,1.92,0,0,0,.36.43V36.08H29.26Z"></path>
+          <path class="blue-fill-logo"
+                d="M78,44.62L66,56.94a2.69,2.69,0,0,1-2,.85,3,3,0,0,1-2.92-3.07V44.24l-0.36.36-12,12.32a2.69,2.69,0,0,1-2,.85A3,3,0,0,1,43.8,54.7V32.64a3,3,0,0,1,2.92-2.85h10.9a3.07,3.07,0,0,1,0,6.14h-8V47.55l6.77-7a3.06,3.06,0,0,1,4.35-.21,0.54,0.54,0,0,0,.14.21V32.8A3,3,0,0,1,63.81,30H74.7a3.07,3.07,0,0,1,0,6.14h-8V47.7l6.77-7a3.06,3.06,0,0,1,4.35-.21c1.51,1,1.3,2.89.15,4.1M39.31,57.8a3,3,0,0,1-2.92-3.07V44.89a1.06,1.06,0,0,1-.36.43L24.77,56.8a2.69,2.69,0,0,1-2,.85,3,3,0,0,1-2.92-3.07V38.06a3.06,3.06,0,0,1,.64-1.86l5.78-5.92a3.09,3.09,0,0,1,1.79-.57h11.4a2.93,2.93,0,0,1,2.92,3.07V54.66a3.1,3.1,0,0,1-3.07,3.14M0-.19V89.75H100V-0.19H0Z"></path>
+        </svg>
+      </div>
+
+    </div>
+
+
+    <div class="body-container">
+      <div id="main-ui-view"  ui-view=""></div>
+    </div>
 
 
     <script>
