--- a/client/index.html
+++ b/client/index.html
@@ -122,9 +122,10 @@
 
 
 
+
     <div class="navbar" navbar=""></div>
     <div class="navbar-load">
-      <div class="navbar-load-inner"></div>
+      <div class="navbar-load-inner">&nbsp;</div>
       <div class="logo-container">
         <svg id="UI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 89.75">
           <defs>
@@ -137,7 +138,6 @@
                 d="M78,44.62L66,56.94a2.69,2.69,0,0,1-2,.85,3,3,0,0,1-2.92-3.07V44.24l-0.36.36-12,12.32a2.69,2.69,0,0,1-2,.85A3,3,0,0,1,43.8,54.7V32.64a3,3,0,0,1,2.92-2.85h10.9a3.07,3.07,0,0,1,0,6.14h-8V47.55l6.77-7a3.06,3.06,0,0,1,4.35-.21,0.54,0.54,0,0,0,.14.21V32.8A3,3,0,0,1,63.81,30H74.7a3.07,3.07,0,0,1,0,6.14h-8V47.7l6.77-7a3.06,3.06,0,0,1,4.35-.21c1.51,1,1.3,2.89.15,4.1M39.31,57.8a3,3,0,0,1-2.92-3.07V44.89a1.06,1.06,0,0,1-.36.43L24.77,56.8a2.69,2.69,0,0,1-2,.85,3,3,0,0,1-2.92-3.07V38.06a3.06,3.06,0,0,1,.64-1.86l5.78-5.92a3.09,3.09,0,0,1,1.79-.57h11.4a2.93,2.93,0,0,1,2.92,3.07V54.66a3.1,3.1,0,0,1-3.07,3.14M0-.19V89.75H100V-0.19H0Z"></path>
         </svg>
       </div>
-
     </div>
 
 
@@ -156,7 +156,7 @@
       ga('send', 'pageview');
     </script>
 
-    <script type="text/javascript" src="cordova.js"></script>
+    <script async type="text/javascript" src="cordova.js"></script>
 
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
