added apple add to home screen support

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 
 
 
+
     <title>Fixit</title>
     <meta name="description" content="">
 
@@ -33,10 +34,17 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
+
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#1a414f">
     <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
     <meta name="theme-color" content="#1a414f">
+
+    <!-- Apple web app support -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1a414f">
+    <link rel="apple-touch-startup-image" href="assets/icons/apple/apple-icon-180x180.png">
 
 
     <style>
