--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" manifest="manifest.appcache"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,8 +12,6 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-
-
 
 
     <title>Fixit</title>
@@ -204,6 +202,26 @@
       <!-- endinjector -->
     <!-- endbuild -->
 
+    <script>
+      (function(){
+        var appCache = window.applicationCache;
+        if(appCache){
+          appCache.addEventListener('updateready', handleCacheEvent, false);
+          appCache.addEventListener('obsolete', handleCacheEvent, false);
+          appCache.addEventListener('error', handleCacheEvent, false);
+        }
+
+        function handleCacheEvent(){
+          if(typeof window._isServiceWorkerContentUpdated === 'function'){
+            window._isServiceWorkerContentUpdated();
+          }
+          else {
+            window._isServiceWorkerContentUpdated = true;
+          }
+        }
+
+      })();
+    </script>
     <script>
       (function(){
         /**
