--- a/client/index.html
+++ b/client/index.html
@@ -41,9 +41,23 @@
     <!-- Apple web app support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#1a414f">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-startup-image" href="assets/icons/apple/apple-icon-180x180.png">
 
+    <!--&lt;!&ndash; iPhone 3GS, 2011 iPod Touch &ndash;&gt;-->
+    <!--<link rel="apple-touch-startup-image" href="startup-320x460.png" media="screen and (max-device-width : 320px)">-->
+
+    <!--&lt;!&ndash; iPhone 4, 4S and 2011 iPod Touch &ndash;&gt;-->
+    <!--<link rel="apple-touch-startup-image" href="startup-640x920.png" media="(max-device-width : 480px) and (-webkit-min-device-pixel-ratio : 2)">-->
+
+    <!--&lt;!&ndash; iPhone 5 and 2012 iPod Touch &ndash;&gt;-->
+    <!--<link rel="apple-touch-startup-image" href="startup-640x1096.png" media="(max-device-width : 548px) and (-webkit-min-device-pixel-ratio : 2)">-->
+
+    <!--&lt;!&ndash; iPad landscape &ndash;&gt;-->
+    <!--<link rel="apple-touch-startup-image" sizes="1024x748" href="startup-1024x748.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : landscape)">-->
+
+    <!--&lt;!&ndash; iPad Portrait &ndash;&gt;-->
+    <!--<link rel="apple-touch-startup-image" sizes="768x1004" href="startup-768x1004.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)">-->
 
     <style>
 
