--- a/client/index.html
+++ b/client/index.html
@@ -31,9 +31,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
-    <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
 
+    <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
     <link rel="manifest" href="manifest.json">
+
+    <!-- Windows -->
     <meta name="msapplication-TileColor" content="#1a414f">
     <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
     <meta name="theme-color" content="#1a414f">
@@ -42,7 +44,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-startup-image" href="assets/icons/apple/apple-icon-180x180.png">
+    <link rel="apple-touch-startup-image" href="assets/splash/apple/Default-Portrait-736h@3x.png">
 
     <!--&lt;!&ndash; iPhone 3GS, 2011 iPod Touch &ndash;&gt;-->
     <!--<link rel="apple-touch-startup-image" href="startup-320x460.png" media="screen and (max-device-width : 320px)">-->
