added info page and fixed up apple homescreen icons

--- a/client/index.html
+++ b/client/index.html
@@ -207,6 +207,7 @@
       <script src="components/auth/user.service.js"></script>
       <script src="components/bbq-admin/bbq-admin.directive.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="components/bbq-info/bbq-info.directive.js"></script>
       <script src="components/bbq-login/bbq-login.directive.js"></script>
       <script src="components/feedback/feedback.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
