--- a/client/index.html
+++ b/client/index.html
@@ -199,17 +199,18 @@
       <!-- injector:js -->
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
+      <script src="components/bbq-info/bbq-info.directive.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
       <script src="components/bbq-admin/bbq-admin.directive.js"></script>
+      <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="components/bbq-info/bbq-info.directive.js"></script>
       <script src="components/bbq-login/bbq-login.directive.js"></script>
       <script src="components/feedback/feedback.service.js"></script>
+      <script src="components/modal/modal.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
       <script src="components/svg/svg.js"></script>
