--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
 
-    <title>Fixit</title>
+    <title>Leads</title>
     <meta name="description" content="">
 
 
