--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <title>Leads</title>
     <meta name="description" content="">
 
-
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple/apple-icon-72x72.png">
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/favicon-194x194.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -148,7 +148,7 @@
       <div class="logo-container">
         <svg id="UI" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 89.75">
           <defs>
-            <style>.white-fill-logo{fill:#fff;}.blue-fill-logo{fill:#005e9c;}</style>
+            <style>.white-fill-logo{fill:#fff;}.blue-fill-logo{fill:#0458A1;}</style>
           </defs>
           <title>logo</title>
           <rect class="white-fill-logo" x="4.03" y="18.04" width="86.21" height="51.3"></rect>
