added round logo

--- a/client/index.html
+++ b/client/index.html
@@ -36,9 +36,9 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Windows -->
-    <meta name="msapplication-TileColor" content="#1a414f">
+    <meta name="msapplication-TileColor" content="#1A2025">
     <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
-    <meta name="theme-color" content="#1a414f">
+    <meta name="theme-color" content="#1A2025">
 
     <!-- Apple web app support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -102,7 +102,7 @@
       .navbar-load-inner {
         position: absolute;
         height: 40px;
-        background-color: #1a414f;
+        background-color: #384652;
         width: 100%;
         top: 0;
       }
@@ -115,7 +115,7 @@
         width: 100%;
         height: 50px;
         position: absolute;
-        top: 0;
+        top: 15px;
       }
 
 
@@ -148,20 +148,23 @@
       <div class="logo-container">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 230 230" style="enable-background:new 0 0 230 230;" xml:space="preserve">
-          <rect style="fill:#0E589E;" width="230" height="230.5"></rect>
+
+          <path style="fill:#0458A1;" d="M115,230.5L115,230.5c-63.5,0-115-51.5-115-115V115C0,51.5,51.5,0,115,0h0c63.5,0,115,51.5,115,115v0.5
+              C230,179,178.5,230.5,115,230.5z"></path>
           <g>
-              <path style="fill:#fff" d="M141.9,141.6c-4.4,1.4-9.1,2.1-13.5,2.1c-6,0-11.6-1.1-15.5-3c-10.4-4.8-17.7-14.8-18.2-24.9
+              <path style="fill:#FFF;" d="M141.9,141.6c-4.4,1.4-9.1,2.1-13.5,2.1c-6,0-11.6-1.1-15.5-3c-10.4-4.8-17.7-14.8-18.2-24.9
                   c-0.3-6.6,2.1-15.9,14.4-24.5c-6.9-1.1-15.4-0.5-22.6,2.9c-7,3.4-11.5,8.9-13.4,16.4c-2.5,10.3,0.3,21.4,8.1,31.1
                   c8.1,10.3,20.6,17.7,34.5,21.1c4.5,0.9,9.2,1.4,14,1.4c11.1,0,21.5-2.6,30.3-7.1L141.9,141.6z"></path>
-              <path style="fill:#fff" d="M129.6,66.3c-1.7,0-3.5,0.1-5.2,0.2c11.4,4.2,21.4,11.1,28.4,20c8.5,10.7,11.6,23,8.8,34.5
+              <path style="fill:#FFF;" d="M129.6,66.3c-1.7,0-3.5,0.1-5.2,0.2c11.4,4.2,21.4,11.1,28.4,20c8.5,10.7,11.6,23,8.8,34.5
                   c-2.1,8.6-7.5,15.1-15.5,19c0,0-0.1,0-0.1,0.1l17.6,15.1c14.7-8.9,24.3-23.4,24.3-39.8C188,88.2,161.8,66.3,129.6,66.3z"></path>
-              <path style="fill:#fff" d="M157.8,120c2.5-10.3-0.3-21.4-8.1-31.1c-8.2-10.4-20.8-17.8-34.9-21.2c-4.5-0.9-9.2-1.4-14-1.4
+              <path style="fill:#FFF;" d="M157.8,120c2.5-10.3-0.3-21.4-8.1-31.1c-8.2-10.4-20.8-17.8-34.9-21.2c-4.5-0.9-9.2-1.4-14-1.4
                   c-11.6,0-22.5,2.9-31.6,7.8l18.1,15.5c10.7-4.1,23.4-3,30.6,0.3c10.4,4.8,17.7,14.8,18.2,24.9c0.3,6.6-2.1,15.9-14.4,24.5
                   c6.9,1.1,15.4,0.5,22.6-2.9C151.5,133,156,127.5,157.8,120z"></path>
-              <path style="fill:#fff" d="M78,144.2c-8.5-10.7-11.6-23-8.8-34.5c2-8.1,6.9-14.4,14.2-18.3L65.7,76.2c-14.1,8.9-23.2,23.1-23.2,39.1
+              <path style="fill:#FFF;" d="M78,144.2c-8.5-10.7-11.6-23-8.8-34.5c2-8.1,6.9-14.4,14.2-18.3L65.7,76.2c-14.1,8.9-23.2,23.1-23.2,39.1
                   c0,27.1,26.1,49,58.4,49c1.8,0,3.6-0.1,5.3-0.2C94.9,159.8,85,153,78,144.2z"></path>
           </g>
         </svg>
+
 
       </div>
     </div>
