--- a/client/index.html
+++ b/client/index.html
@@ -17,34 +17,34 @@
     <title>Leads</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="194x194" href="assets/icons/favicon-194x194.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="leads.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/leads.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/leads.png">
+    <link rel="icon" type="image/png" sizes="194x194" href="assets/icons/leads.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/leads.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/leads.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/leads.png">
 
     <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
     <link rel="manifest" href="manifest.json">
 
     <!-- Windows -->
     <meta name="msapplication-TileColor" content="#1A2025">
-    <meta name="msapplication-TileImage" content="assets/icons/microsoft/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="assets/icons/leads.png">
     <meta name="theme-color" content="#1A2025">
 
     <!-- Apple web app support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-startup-image" href="assets/splash/apple/Default-Portrait-736h@3x.png">
+    <link rel="apple-touch-startup-image" href="assets/icons/leads.png">
 
     <!--&lt;!&ndash; iPhone 3GS, 2011 iPod Touch &ndash;&gt;-->
     <!--<link rel="apple-touch-startup-image" href="startup-320x460.png" media="screen and (max-device-width : 320px)">-->
@@ -65,14 +65,14 @@
 
       @font-face {
         font-family: 'PT-Sans';
-        src: url('assets/fonts/PT_Sans-Web-Regular.ttf') format('truetype');
+        src: url('assets/fonts/MuseoSans_500Web.woff') format('truetype');
         font-weight: 500;
         font-style: normal;
       }
 
       @font-face {
         font-family: 'PT-Sans';
-        src: url('assets/fonts/PT_Sans-Web-Bold.ttf') format('truetype');
+        src: url('assets/fonts/MuseoSans_700Web.woff') format('truetype');
         font-weight: 700;
         font-style: normal;
       }
