--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 
 
     <!-- http://realfavicongenerator.net/ -->
-    <link rel="shortcut icon" href="leads.png">
+    <link rel="shortcut icon" href="assets/icons/leads.png">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple/apple-touch-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple/apple-touch-icon-72x72.png">
