--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' https://www.google-analytics.com data: localhost:35729 'unsafe-inline' 'unsafe-eval'; font-src * data:">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; img-src * 'self' 'unsafe-inline' data:; style-src 'self' 'unsafe-inline'; script-src 'self' https://www.google-analytics.com data: localhost:35729 'unsafe-inline' 'unsafe-eval'; font-src * data:">
 
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
