login flow and welcome splash screen

--- a/client/index.html
+++ b/client/index.html
@@ -219,6 +219,7 @@
       <script src="components/bbq-feedback/bbq-feedback.directive.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="components/bbq-login/bbq-login.directive.js"></script>
+      <script src="components/bbq-welcome/bbq-welcome.directive.js"></script>
       <script src="components/feedback/feedback.service.js"></script>
       <script src="components/modal/modal.service.js"></script>
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
