Added token login using uuid token

--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
       .navbar-load-inner {
         position: absolute;
         height: 40px;
-        background-color: #384652;
+        background-color: #0458A1;
         width: 100%;
         top: 0;
       }
